src/test/deca/context/invalid/provided/typeMismatch.deca
// Description:
//    reste entier de la division d'un float par un int
//
// Resultats:
//   typeMismatch.deca:23:14: Type mismatch:both operands must be of type int
//
// Historique:
//    cree le 11/01/2025
{
    int x = 220;
    float y = 284.5; // Erreur : 'y' est un float
    int sumX = 0, sumY = 0;
    int j = 1;

    int i = 1;
    while (i <= x / 2) {
        if (x % i == 0) {
            sumX =sumX + i;
        }
        i = i + 1;
    }
    while (j <= y / 2) { // Erreur : y est float, attendu int
        if (y % j == 0) { // Erreur : Modulo entre float et int
            sumY =sumY+ j;
        }
        j = j + 1;
    }

    if (sumX == y && sumY == x) {
        println(x , " et " , y ," sont des nombres amicaux.");
    }
}
